--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+@font-face {
+  font-family: "France";
+  font-style: normal;
+  font-weight: bold;
+  src: url(assets/FranceBold.ttf) format("opentype");
+}
