--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,71 +1,72 @@
 <div class="container-fluid">
   <div class="row">
-    <nav class="col-md-2 d-none d-md-block bg-express sidebar">
-      <p class="express-lands mt-5"> <span class="s mx-2">S</span> Express Lands</p>
-      <div class="sidebar-sticky">
-        <ul class="nav flex-column">
-          <li class="nav-item">
-            <div class="dashboard-active mt-5">
+    <div class="col-md-2 col-12 d-none d-md-block bg-express sidebar">
+      <nav>
+        <p class="express-lands mt-5"> <span class="s mx-2">S</span> Express Lands</p>
+        <div class="sidebar-sticky">
+          <ul class="nav flex-column">
+            <li class="nav-item">
+              <div class="dashboard-active mt-5">
+                <a class="nav-link" href="#">
+                  <i class="fas fa-home mr-3"></i>
+                  Dashboard <span class="sr-only">(current)</span>
+                </a>
+              </div>
+
+            </li>
+            <li class="nav-item mt-2">
               <a class="nav-link" href="#">
-                <i class="fas fa-home mr-3"></i>
-                Dashboard <span class="sr-only">(current)</span>
+                <i class="fas fa-user-friends mr-3"></i>
+                Menu Item 1
               </a>
-            </div>
+            </li>
+            <li class="nav-item mt-2">
+              <a class="nav-link" href="#">
+                <i class="fas fa-user-friends mr-3"></i>
+                Menu Item 2
+              </a>
+            </li>
+            <li class="nav-item mt-2">
+              <a class="nav-link" href="#">
+                <i class="fas fa-coins mr-3"></i>
+                Menu Item 3
+              </a>
+            </li>
+            <li class="nav-item mt-2">
+              <a class="nav-link" href="#">
+                <i class="fas fa-user-check mr-3"></i>
+                Menu Item 4
+              </a>
+            </li>
 
-          </li>
-          <li class="nav-item mt-2">
-            <a class="nav-link" href="#">
-              <i class="fas fa-user-friends mr-3"></i>
-              Menu Item 1
-            </a>
-          </li>
-          <li class="nav-item mt-2">
-            <a class="nav-link" href="#">
-              <i class="fas fa-user-friends mr-3"></i>
-              Menu Item 2
-            </a>
-          </li>
-          <li class="nav-item mt-2">
-            <a class="nav-link" href="#">
-              <i class="fas fa-coins mr-3"></i>
-              Menu Item 3
-            </a>
-          </li>
-          <li class="nav-item mt-2">
-            <a class="nav-link" href="#">
-              <i class="fas fa-user-check mr-3"></i>
-              Menu Item 4
-            </a>
-          </li>
-
-        </ul>
+          </ul>
 
 
-        <ul class="nav flex-column mb-2 ">
-          <li class="nav-item mb-5 ">
-            <a class="nav-link users" href="#">
-              <i class="fas fa-cog mr-3"></i>
-              Manage Users
-            </a>
-          </li>
+          <ul class="nav flex-column mb-2 ">
+            <li class="nav-item mb-5 ">
+              <a class="nav-link users" href="#">
+                <i class="fas fa-cog mr-3"></i>
+                Manage Users
+              </a>
+            </li>
 
-        </ul>
-      </div>
-    </nav>
-
-    <main role="main" class="col-md-9 col-12 ml-sm-auto col-lg-10 px-4 bg-express ">
+          </ul>
+        </div>
+      </nav>
+    </div>
+    <div class="col-md-10 col-12 col-lg-10 bg-express ">
 
       <div class="row mt-3">
 
 
 
-        <div class="col-lg-1 mr-auto">
+        <div class="col-1 mr-auto">
           <div class="hamburger-icon mb-2"></div>
-          <div class="hamburger-icon"></div>
+          <div class="hamburger-icon mb-2"></div>
         </div>
 
 
-        <div class="col-lg-4 ml-3">
+        <div class="col-lg-4 col-12 mb-3 ml-3">
           <div class="notifications-card">
             <img src="../../../assets/images/Vector (3).png" class="empty scale vector" width="62" height="74"
               id="n53_588">
@@ -75,7 +76,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4">
+        <div class="col-lg-4 col-12 ml-3">
           <div class="notifications-card">
             <img src="../../../assets/images/user.png" class="empty scale vector" width="62" height="74" id="n53_588">
             <p>Chidimma Nwanya</p>
@@ -90,12 +91,12 @@
       </div>
 
 
-      <div class="row">
-        <div class="col-lg-1 mt-4 mr-auto">
-          <p class="dashboard-text">Dashboard</p>
+      <div class="row mt-3">
+        <div class="col-1 mt-4 mr-auto">
+          <p class="dashboard-text ml-3">Dashboard</p>
         </div>
 
-        <div class="col-lg-4 mt-4">
+        <div class="col-lg-4 col-12 my-4">
 
           <img src="../../../assets/images/spanner.png" class="settings mr-2" alt="">
           <span class="customize mr-2">Customize Dashboard</span>
@@ -110,7 +111,7 @@
 
       <div class="row">
         <div class="col-lg-6">
-          <div class="card-1">
+          <div class="card-1 mb-5 mx-2">
 
             <div class="row">
               <div class="col-10"></div>
@@ -138,7 +139,7 @@
                 <p class="tour-button ml-3"><span class="tour-text text-center p-3 my-auto">Take a Tour</span></p>
               </div>
               <div class="col-6">
-                <img src="../../../assets/images/imac.png" alt="" class="imac">
+                <img src="../../../assets/images/imac.png" alt="" class="imac mb-3">
               </div>
             </div>
 
@@ -155,14 +156,16 @@
 
             <div class="row">
               <div class="col-12">
-                <p class="card-user-text-optimized ml-3">We’ve optimized the system to process your application as fast
+                <p class="card-user-text-optimized ml-3">We’ve optimized the system to process your application as
+                  fast
                   as possible. Click on the button below to get started.</p>
               </div>
             </div>
 
             <div class="row">
               <div class="col-6">
-                <p class="tour-button-blue ml-3"><span class="tour-text-blue text-center p-3 my-auto">New Request</span>
+                <p class="tour-button-blue ml-3"><span class="tour-text-blue text-center p-3 my-auto">New
+                    Request</span>
                 </p>
               </div>
               <div class="col-6">
@@ -175,8 +178,8 @@
 
       <section class="card-rows">
         <div class="row">
-          <div class="col-4">
-            <div class="budget-card-white mb-3">
+          <div class="col-lg-4 col-12">
+            <div class="budget-card-white mb-3 mx-auto">
               <div class="row">
                 <div class="col-7">
                   <p class="budget-top-text mt-3 ml-3">Annual Play Budget</p>
@@ -204,13 +207,13 @@
               </div>
 
               <div class="row bg-card-white">
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-6">
                   <p class="payable-amount mt-3 ml-3">Total Play (NGN)</p>
                   <p class="amount ml-3 mt-3">50,000,000</p>
                   <p class="payable-amount mt-3 ml-3">Total Spent (NGN)</p>
                   <p class="amount ml-3 mt-3">18,000,000</p>
                 </div>
-                <div class="col-lg-6 mt-3">
+                <div class="col-lg-6 col-6 mt-3">
                   <div class="row">
                     <span class="amount-badges "><img src="../../../assets/images/blue.png" alt=""></span>
                     <p class="payable-amount mt-1 ml-3">Total Spent</p>
@@ -220,14 +223,14 @@
                     <p class="payable-amount ml-3">Balance</p>
                   </div>
                   <div class="row">
-                    <p class="payable-amount ml-3">Balance (NGN)</p>
+                    <p class="payable-amount ml-3 ">Balance (NGN)</p>
                     <p class="amount  ml-3">32,000,000</p>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-4">
+          <div class="col-lg-4 col-12 mx-auto">
             <div class="budget-card-white mb-3">
               <div class="row">
                 <div class="col-7">
@@ -256,13 +259,13 @@
               </div>
 
               <div class="row bg-card-orange">
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-6">
                   <p class="payable-amount mt-3 ml-3">Total Work (NGN)</p>
                   <p class="amount ml-3 mt-3">20,000,000</p>
                   <p class="payable-amount mt-4 ml-3">Total Spent (NGN)</p>
                   <p class="amount ml-3 my-3">10,000,000</p>
                 </div>
-                <div class="col-lg-6 mt-3">
+                <div class="col-lg-6 col-6 mt-3">
                   <div class="row">
                     <span class="amount-badges "><img src="../../../assets/images/red.png" alt=""></span>
                     <p class="payable-amount mt-1 ml-3">Total Spent</p>
@@ -272,14 +275,14 @@
                     <p class="payable-amount ml-3">Balance</p>
                   </div>
                   <div class="row">
-                    <p class="payable-amount  ml-3">Balance (NGN)</p>
+                    <p class="payable-amount ml-3 ">Balance (NGN)</p>
                     <p class="amount  ml-3">10,000,000</p>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-4">
+          <div class="col-lg-4 col-12">
             <div class="bg-gradient mb-3">
               <div class="row">
                 <div class="col-7">
@@ -305,13 +308,13 @@
               </div>
 
               <div class="row ">
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-6">
                   <p class="payable-amount mt-3 ml-3 text-white">Total Play (NGN)</p>
                   <p class="amount ml-3 mt-3 text-white">50,000,000</p>
                   <p class="payable-amount mt-4 ml-3 text-white">Total Spent (NGN)</p>
                   <p class="amount ml-3 mt-3 text-white">18,000,000</p>
                 </div>
-                <div class="col-lg-6 mt-3">
+                <div class="col-lg-6 col-6 mt-3">
                   <div class="row">
                     <span class="amount-badges "><img src="../../../assets/images/blue.png" alt=""></span>
                     <p class="payable-amount mt-1 ml-3 text-white">Total Spent</p>
@@ -330,6 +333,6 @@
           </div>
         </div>
       </section>
-    </main>
+    </div>
   </div>
 </div>
