--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -302,7 +302,7 @@
                 <div class="col-8 mx-auto mb-3 chart">
 
                   <img src="../../../assets/images/cycle3.png" alt="">
-                  <div class="chart-text text-center">ASSETS</div>
+                  <div class="chart-text text-center text-white">ASSETS</div>
 
                 </div>
               </div>
