--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<body class="bg-gradient-blue">
+<div class="bg-gradient-blue">
 
   <div class="container">
 
@@ -26,22 +26,30 @@
                     <p class="welcome my-3">Welcome back! Please login to your account</p>
                   </div>
                   <div class="row">
-                    <div class="login-form mt-4">
+                    <div class="login-form mt-4 " [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                       <form class="mt-5">
                         <div class="form-group ml-4">
 
-                          <input type="text" class="form-control" placeholder="Enter your Username">
+                          <input type="text" class="form-control" placeholder="Enter your Username"
+                            ormControlName="username" class="form-control"
+                            [ngClass]="{ 'is-invalid': submitted && f.username.errors }">
+                          <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
+                            <div *ngIf="f.username.errors.required">Username is required</div>
+                          </div>
 
                         </div>
                         <div class="form-group ml-4">
 
-                          <input type="password" class="form-control" placeholder="Enter your Password ">
+                          <input type="password" formControlName="password" class="form-control"
+                            [ngClass]="{ 'is-invalid': submitted && f.password.errors }"
+                            placeholder="Enter your Password ">
                         </div>
 
-                        <button type="submit" class="btn btn-block btn-login ml-4">LOG IN</button>
+                        <button type="submit" [disabled]="loading" class="btn btn-block btn-login ml-4"><span
+                            *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>LOG IN</button>
                       </form>
                       <div class="text-center mt-3 forgot-password">
-                        Forgot Password?
+                        <a routerLink="/register">Register</a>
                       </div>
                     </div>
                   </div>
@@ -57,14 +65,6 @@
 
   </div>
 
-  <!-- Bootstrap core JavaScript-->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-  <!-- Core plugin JavaScript-->
-  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
-  <!-- Custom scripts for all pages-->
-  <script src="js/sb-admin-2.min.js"></script>
-
-</body>
+</div>
