--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -27,7 +27,7 @@
                   </div>
                   <div class="row">
                     <div class="login-form mt-4">
-                      <form class="mt-5" (ngSubmit)="onSubmit()">
+                      <form class="mt-5" #loginForm="ngForm" (ngSubmit)="onSubmit()">
                         <div class="form-group ml-4">
 
                           <input type="text" class="form-control" placeholder="Enter your Username" class="form-control"
@@ -57,8 +57,7 @@
                           </div>
                         </div>
 
-                        <button type="submit" [class.spinner]="loading" [disabled]="loading"
-                          class="btn btn-block btn-login ml-4">Login
+                        <button type="submit" [disabled]="loginForm.invalid" class="btn btn-block btn-login ml-4">Login
                         </button>
                       </form>
                       <div class="text-center mt-3 forgot-password">
