--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div class="container-fluid">
-  <flash-messages></flash-messages>
-  <router-outlet>
-  </router-outlet>
+<div class="container">
+  <flash-messages class="flash-messaging"></flash-messages>
 </div>
+<router-outlet>
+</router-outlet>
