--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -26,7 +26,7 @@
                   </div>
                   <div class="row">
                     <div class="login-form mt-4">
-                      <form class="mt-5" (ngSubmit)="onSubmit()">
+                      <form class="mt-5" #registerForm="ngForm" (ngSubmit)="onSubmit()">
                         <div class="form-group ml-4">
 
                           <input type="text" class="form-control" placeholder="Enter your Username" class="form-control"
@@ -56,7 +56,7 @@
                           </div>
                         </div>
 
-                        <button type="submit" [class.spinner]="loading" [disabled]="loading"
+                        <button type="submit" [disabled]="registerForm.invalid"
                           class="btn btn-block btn-login ml-4">Register
                         </button>
                       </form>
